@@ -4338,7 +4338,7 @@ Corpse* Merc::GetGroupMemberCorpse() {
 				if(g->members[i] && g->members[i]->IsClient()) {
 					corpse = entity_list.GetCorpseByOwnerWithinRange(g->members[i]->CastToClient(), this, RuleI(Mercs, ResurrectRadius));
 
-					if(corpse && !corpse->Rezzed()) {
+					if(corpse && !corpse->IsRezzed()) {
 						return corpse;
 					}
 				}
